# aws-mocks

./: Cargo.toml  README.md
resources/: ACM  AMP  AccessAnalyzer  Account  AcmPca  Amplify  AmplifyBackend  AmplifyUiBuilder  ApiGateway  ApiGatewayManagement  ApiGatewayV2  AppConfig  AppConfigData  AppFabric  AppFlow  AppIntegrations  AppMesh  AppRunner  AppStream  AppSync  AppTest  Athena  Backup  Batch  CloudFormation  CloudFront  CloudTrail  CloudWatch  CodeBuild  CodeCommit  CodePipeline  CognitoIdentityProvider  DataBrew  DataPipeline  DirectConnect  DynamoDB  EC2  EFS  EKS  EMR  (+26 more)
src/: access_analyzer.rs  account.rs  acm.rs  acm_pca.rs  amp.rs  amplify.rs  amplify_backend.rs  amplify_ui_builder.rs  api_gateway.rs  api_gateway_management.rs  api_gateway_v2.rs  app_config.rs  app_config_data.rs  app_fabric.rs  app_flow.rs  app_integrations.rs  app_mesh.rs  app_runner.rs  app_stream.rs  app_sync.rs  app_test.rs  athena.rs  backup.rs  batch.rs  cloud_formation.rs  cloud_front.rs  cloud_trail.rs  cloud_watch.rs  code_build.rs  code_commit.rs  code_pipeline.rs  cognito_identity_provider.rs  data_brew.rs  data_pipeline.rs  direct_connect.rs  dynamo_db.rs  ec2.rs  efs.rs  eks.rs  elasti_cache.rs  (+28 more)
