[package]
name = "aws_mock"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/lucasmdjl/aws-mock"
description = "A mocking library for AWS. This is NOT an official AWS library."
readme = "README.md"
keywords = ["AWS", "mock", "testing"]
categories = ["development-tools::testing"]

[dependencies]
aws-config = { version = "1.1.10", optional = false }

aws-sdk-accessanalyzer = { version = "1", optional = true }
aws-sdk-account = { version = "1", optional = true }
aws-sdk-acm = { version = "1", optional = true }
aws-sdk-apigateway = { version = "1", optional = true }
aws-sdk-apigatewayv2 = { version = "1", optional = true }
aws-sdk-cloudfront = { version = "1", optional = true }
aws-sdk-cloudwatch = { version = "1", optional = true }
aws-sdk-cognitoidentityprovider = { version = "1", optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
aws-sdk-ec2 = { version = "1", optional = true }
aws-sdk-eks = { version = "1", optional = true }
aws-sdk-elasticache = { version = "1", optional = true }
aws-sdk-iam = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }
aws-sdk-lambda = { version = "1", optional = true }
aws-sdk-rds = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-sagemaker = { version = "1", optional = true }
aws-sdk-sns = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
aws-sdk-ssm = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
mockall = { version = "0.12", optional = true }

[features]
access-analyzer = ["dep:aws-sdk-accessanalyzer"]
account = ["dep:aws-sdk-account"]
acm = ["dep:aws-sdk-acm"]
api-gateway = ["dep:aws-sdk-apigateway"]
api-gateway-v2 = ["dep:aws-sdk-apigatewayv2"]
cloud-front = ["dep:aws-sdk-cloudfront"]
cloud-watch = ["dep:aws-sdk-cloudwatch"]
cognito-identity-provider = ["dep:aws-sdk-cognitoidentityprovider"]
dynamo-db = ["dep:aws-sdk-dynamodb"]
ec2 = ["dep:aws-sdk-ec2"]
eks = ["dep:aws-sdk-eks"]
elasti-cache = ["dep:aws-sdk-elasticache"]
iam = ["dep:aws-sdk-iam"]
kms = ["dep:aws-sdk-kms"]
lambda = ["dep:aws-sdk-lambda"]
rds = ["dep:aws-sdk-rds"]
s3 = ["dep:aws-sdk-s3"]
sage-maker = ["dep:aws-sdk-sagemaker"]
sns = ["dep:aws-sdk-sns"]
sqs = ["dep:aws-sdk-sqs"]
ssm = ["dep:aws-sdk-ssm"]
secrets-manager = ["dep:aws-sdk-secretsmanager"]
mockall = ["dep:mockall"]