[package]
name = "aws_mock"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/lucasmdjl/aws-mock"
description = "A mocking library for AWS. This is NOT an official AWS library."
readme = "README.md"
keywords = ["AWS", "mock", "testing"]
categories = ["development-tools::testing"]

[dependencies]
aws-config = { version = "1", optional = false }

aws-sdk-accessanalyzer = { version = "1", optional = true }
aws-sdk-account = { version = "1", optional = true }
aws-sdk-acm = { version = "1", optional = true }
aws-sdk-acmpca = { version = "1", optional = true }
aws-sdk-amplify = { version = "1", optional = true }
aws-sdk-apigateway = { version = "1", optional = true }
aws-sdk-apigatewayv2 = { version = "1", optional = true }
aws-sdk-appsync = { version = "1", optional = true }
aws-sdk-athena = { version = "1", optional = true }
aws-sdk-backup = { version = "1", optional = true }
aws-sdk-batch = { version = "1", optional = true }
aws-sdk-cloudformation = { version = "1", optional = true }
aws-sdk-cloudfront = { version = "1", optional = true }
aws-sdk-cloudtrail = { version = "1", optional = true }
aws-sdk-cloudwatch = { version = "1", optional = true }
aws-sdk-codebuild = { version = "1", optional = true }
aws-sdk-codecommit = { version = "1", optional = true }
aws-sdk-codepipeline = { version = "1", optional = true }
aws-sdk-cognitoidentityprovider = { version = "1", optional = true }
aws-sdk-databrew = { version = "1", optional = true }
aws-sdk-datapipeline = { version = "1", optional = true }
aws-sdk-directconnect = { version = "1", optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
aws-sdk-ec2 = { version = "1", optional = true }
aws-sdk-efs = { version = "1", optional = true }
aws-sdk-eks = { version = "1", optional = true }
aws-sdk-elasticache = { version = "1", optional = true }
aws-sdk-elasticbeanstalk = { version = "1", optional = true }
aws-sdk-emr = { version = "1", optional = true }
aws-sdk-globalaccelerator = { version = "1", optional = true }
aws-sdk-glue = { version = "1", optional = true }
aws-sdk-iam = { version = "1", optional = true }
aws-sdk-kinesis = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }
aws-sdk-lambda = { version = "1", optional = true }
aws-sdk-macie2 = { version = "1", optional = true }
aws-sdk-mq = { version = "1", optional = true }
aws-sdk-opensearch = { version = "1", optional = true }
aws-sdk-polly = { version = "1", optional = true }
aws-sdk-quicksight = { version = "1", optional = true }
aws-sdk-rds = { version = "1", optional = true }
aws-sdk-redshift = { version = "1", optional = true }
aws-sdk-rekognition = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-sagemaker = { version = "1", optional = true }
aws-sdk-sns = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
aws-sdk-ssm = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-sdk-textract = { version = "1", optional = true }
aws-sdk-transcribe = { version = "1", optional = true }
aws-sdk-translate = { version = "1", optional = true }
aws-sdk-xray = { version = "1", optional = true }
mockall = { version = "0.12", optional = true }

[features]
access-analyzer = ["dep:aws-sdk-accessanalyzer"]
account = ["dep:aws-sdk-account"]
acm = ["dep:aws-sdk-acm"]
acm-pca = ["dep:aws-sdk-acmpca"]
amplify = ["dep:aws-sdk-amplify"]
api-gateway = ["dep:aws-sdk-apigateway"]
api-gateway-v2 = ["dep:aws-sdk-apigatewayv2"]
app-sync = ["dep:aws-sdk-appsync"]
athena = ["dep:aws-sdk-athena"]
backup = ["dep:aws-sdk-backup"]
batch = ["dep:aws-sdk-batch"]
cloud-formation = ["dep:aws-sdk-cloudformation"]
cloud-front = ["dep:aws-sdk-cloudfront"]
cloud-trail = ["dep:aws-sdk-cloudtrail"]
cloud-watch = ["dep:aws-sdk-cloudwatch"]
code-build = ["dep:aws-sdk-codebuild"]
code-commit = ["dep:aws-sdk-codecommit"]
code-pipeline = ["dep:aws-sdk-codepipeline"]
cognito-identity-provider = ["dep:aws-sdk-cognitoidentityprovider"]
data-brew = ["dep:aws-sdk-databrew"]
data-pipeline = ["dep:aws-sdk-datapipeline"]
direct-connect = ["dep:aws-sdk-directconnect"]
dynamo-db = ["dep:aws-sdk-dynamodb"]
ec2 = ["dep:aws-sdk-ec2"]
efs = ["dep:aws-sdk-efs"]
eks = ["dep:aws-sdk-eks"]
elasti-cache = ["dep:aws-sdk-elasticache"]
elastic-beanstalk = ["dep:aws-sdk-elasticbeanstalk"]
emr = ["dep:aws-sdk-emr"]
global-accelerator = ["dep:aws-sdk-globalaccelerator"]
glue = ["dep:aws-sdk-glue"]
iam = ["dep:aws-sdk-iam"]
kinesis = ["dep:aws-sdk-kinesis"]
kms = ["dep:aws-sdk-kms"]
lambda = ["dep:aws-sdk-lambda"]
macie2 = ["dep:aws-sdk-macie2"]
mq = ["dep:aws-sdk-mq"]
open-search = ["dep:aws-sdk-opensearch"]
polly = ["dep:aws-sdk-polly"]
quick-sight = ["dep:aws-sdk-quicksight"]
rds = ["dep:aws-sdk-rds"]
redshift = ["dep:aws-sdk-redshift"]
rekognition = ["dep:aws-sdk-rekognition"]
s3 = ["dep:aws-sdk-s3"]
sage-maker = ["dep:aws-sdk-sagemaker"]
sns = ["dep:aws-sdk-sns"]
sqs = ["dep:aws-sdk-sqs"]
ssm = ["dep:aws-sdk-ssm"]
secrets-manager = ["dep:aws-sdk-secretsmanager"]
textract = ["dep:aws-sdk-textract"]
transcribe = ["dep:aws-sdk-transcribe"]
translate = ["dep:aws-sdk-translate"]
x-ray = ["dep:aws-sdk-xray"]
mockall = ["dep:mockall"]